# field-eng-skills

./: .continue-here.md  .gitignore  CLAUDE.md  DASHBOARD-V2-SPEC.md  GSUITE-GONG-HANDOFF.md  PHASE10-ZENDESK-HANDOFF.md  PHASE9-EXPANSION-HANDOFF.md  README.md  SKILL-INVENTORY.md
.claude/skills/customer-snapshot/: SKILL.md  pyproject.toml
.claude/skills/customer-snapshot/evals/: evals.json
.claude/skills/customer-snapshot/prototypes/support-tickets/: 1-resolution-health.html  2-monthly-volume-trend.html  3-concern-treemap.html  4-ticket-age-scatter.html  5-submitter-activity.html  6-escalation-sankey.html
.claude/skills/customer-snapshot/references/: critique-2026-03-11.md  design-system.md
.claude/skills/customer-snapshot/templates/: assemble.py  compose.py  dashboard-v2.html  intelligence-dashboard.html  issue-tracker.html  panels.yaml  shell.html  test_assemble.py
.claude/skills/customer-snapshot/templates/lib/: chart-helpers.js  panel-registry.js
.claude/skills/customer-snapshot/templates/panels/: actions.js  cohort.js  correlation.js  decay.js  issues.js  journey.js  overview.js  performance.js  risk.js  sdk-versions.js  slack.js  (+4 more)
.claude/skills/deep-analytics/: SKILL.md  pyproject.toml
.claude/skills/deep-analytics/scripts/: generate.py  schema_validator.py
.claude/skills/deep-analytics/templates/: base-template.html
.claude/skills/deep-analytics/tests/: conftest.py  test_cohort_analysis.py  test_end_to_end.py  test_generate.py  test_performance.py  test_risk_scoring.py  test_schema_validator.py  test_team_detection.py  test_usage_correlation.py
(+232 files in other folders)
