[project]
name = "deep-analytics-skill"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-bigquery>=3.39.0",
    "google-cloud-bigquery-storage>=2.36.0",
    "pandas>=2.0.0",
    "db-dtypes>=1.5.0",
    "pyarrow>=17.0.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = ["pytest>=9.0"]
